--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,6 @@ link {
   position: absolute;
   top: 15rem;
   left: 20rem;
-
 }
 
 .card {
@@ -62,7 +61,8 @@ link {
   height: 10rem;
   padding: 2rem;
   color: #624a3c;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+  margin: 1rem;
 }
 
 .cardWrapper {
@@ -74,6 +74,7 @@ link {
 
 h2 {
   color: green;
+  font-size: 2rem;
 }
 
 .space {
