--- a/src/index.css
+++ b/src/index.css
@@ -1,82 +1,13 @@
 body {
-   margin: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App {
-  text-align: center;
-  height: 100vh;
-  width: 100vw;
-  background-size: cover;
-  background-repeat: repeat;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-nav {
-  position: fixed;
-  width: 100%;
-  display: flex;
-  justify-content:space-around;
-  align-items: center;
-  min-height: 10vh;
-  background-color: rgba(252, 252, 252, 0.603);
-  border: none;
-  font-size: 3vh;
-}
-
-.nav-link {
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 15%;
-  color: green;
-}
-
-.nav-link:hover {
-  color: black;
-  border-left: solid 2px black;
-  border-right: solid 2px black;
-
-}
-
-link {
-  border-right: none;
-}
-
-.Home {
-  display: flex;
-  justify-content:space-between;
-  align-items: center;
-  position: absolute;
-  top: 15rem;
-  left: 20rem;
-}
-
-.card {
-  width: 20rem;
-  height: 10rem;
-  padding: 2rem;
-  color: #624a3c;
-  font-size: 1.3rem;
-  margin: 1rem;
-}
-
-.cardWrapper {
-  display: flex;
-  justify-content: center;
-  margin: 1rem;
-  flex-wrap: wrap;
-}
-
-h2 {
-  color: green;
-  font-size: 2rem;
-}
-
-.space {
-  height: 6rem;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
